[project]
name = "drivault"
version = "0.1.0"
description = "Your personal"
authors = [{name = "Abhishek Mishra", email = "abhishek.mishra4@1mg.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "tortoise-orm[asyncpg] (>=0.25.1,<0.26.0)",
    "python-multipart",
    "passlib (>=1.7.0,<1.7.4)",
    "python-jose (>=3.4.0,<3.5.0)",
    "bcrypt (>=3.2.0,<3.2.2)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
